--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -9,32 +9,28 @@
     <div class="row">
 	    <div class="col-sm-6">
     		<p>
-            I have over 6 years of experience as a software engineer, and have worked
-            at both small startups and large organizations. While I'm a proficient full-stack
-            developer, my expertise is in building scalable backend services (API services, stream processing,
-            and async mechanisms).
+          I am a fresh graduate from Nayang Technological University, Electrical and Electronic Engineering specializing in Info-Communications Engineering.
         </p>
         <p>
-           I love building things.
-           While hard engineering problems are often intrinsically fun to tackle,
-           I'm most attracted to solving real customer problems with a business justification.
-           I'm looking for a senior individual contributor role where I can take on on collaborative
-           team leadership responsibilites, and gain experience with
-           architecture and project management.
+           I love software, programming and I am always eager to build and learn new things!
+           While learning new skills and tackling problems is not easy, I look forward to tackle real-world problems
+           and developing business solutions.
         </p>
       </div>
 	    <div class="col-sm-6">
-		    <h3 style="margin-top:0;">Highlights</h3>
+        <h3 style="margin-top:0;">Academic Projects</h3>
+        <div>Image Classification Via Transfer Learning</div>
 		    <ul>
     			<li>
-            Migrated a monolithic Heroku Ruby on Rails API to multiple Scala
-            services hosted on AWS. Delivered ahead of schedule, projected to save $18k/quarter.
+            Explored various domain adaptation algorithms on online and custom datasets
     			</li>
           <li>
-            Presented research and proof-of-concept to convince team to move from Hadoop MR to Spark; reduced nodes by 60% and ran 5-8x faster.
+            Developed a Graphic User Interface (GUI) to aid in the further analysis of results from experiments
+          </li>
           <li>
-            Automated test automation in ramp-up to large data center migration, saving hundreds of developer hours.
-    			<li>
+            Explored class alignment during training and proposed a framework to improve performance of existing domain adaptation algorithms
+          </li>
+          <li>
             Presented "Understanding the GIL to Prevent Race Conditions" at RubyConf 2016.
     			</li>
     			<li>
