Added more skills

--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -30,12 +30,18 @@
           <li>
             Explored class alignment during training and proposed a framework to improve performance of existing domain adaptation algorithms
           </li>
+		    </ul>
+          <div>Machine Learning and Its Applications</div>
+          <ul>
           <li>
-            Presented "Understanding the GIL to Prevent Race Conditions" at RubyConf 2016.
+            Collaborated with a team of 10 individuals to develop an application using machine learning
     			</li>
     			<li>
-            Awarded patent for novel approach to item normalization in 3rd party catalog data feeds.
-    			</li>
+            Designed a neural network to recognize facial expressions over a period of 5 weeks
+          </li>
+          <li>
+            Collection of over 20,000 images of facial data from project team to facilitate facial identification
+          </li>
 		    </ul>
 	    </div>
     </div>
