Changed heading size

--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -19,7 +19,7 @@
       </div>
 	    <div class="col-sm-6">
         <h3 style="margin-top:0;">Academic Projects</h3>
-        <div>Image Classification Via Transfer Learning</div>
+        <h4>Image Classification Via Transfer Learning</h4>
 		    <ul>
     			<li>
             Explored various domain adaptation algorithms on online and custom datasets
@@ -31,7 +31,7 @@
             Explored class alignment during training and proposed a framework to improve performance of existing domain adaptation algorithms
           </li>
 		    </ul>
-          <div>Machine Learning and Its Applications</div>
+          <h4>Machine Learning and Its Applications</h4>
           <ul>
           <li>
             Collaborated with a team of 10 individuals to develop an application using machine learning
