--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -13,15 +13,13 @@
         </p>
 			<ul>
 			  <li>
-				 <b>Deep learning</b>. It's an exciting time for machine learning. I'm working through several online classes, and swap articles with collegues.
+				 <b>Deep learning</b>
 			  </li>
 			  <li>
-				  <b>RC Planes and Boats</b>. I've been an enthusiastic hobbiest since I was a teenager - but only as an adult am I able to afford the higher-quality
-          devices. I like to modify existing kits to improve speed, and add instrumentation.
+				  <b>Web Development</b>
 			  </li>
 			  <li>
-				  <b>Mountaineering</b>. I live in the Pacific Northwest, home of some of the greatest mountains and trails in the country. I enjoy spending weekends
-          on scrambles and getting lost in the woods.
+				  <b>Internet of Things (IOT)</b>
       </li>
 			</ul>
 		</div>
@@ -29,20 +27,17 @@
       <h3 style="margin-top:0">Recent Projects</h3>
 		  <ul>
   			<li>
-          OpenGidget is an open-source fork of Raspbian Linux that makes it easier to auto-provision a headless Raspberry PI,
-          get it onto your WiFi network, and deploy simple Python and Ruby scripts that run at startup - all without needing to plug in a keyboard/monitor.
     		</li>
   			<li>
-          My Medium blog covers my ongoing attempts to instrument and automate everything in my house.
   			</li>
   		    </ul>
-  		    <h3>Other Things</h3>
+			  <h3>Skills</h3>
   		    <ul>
   			<li>
-           Volunteer at Boys and Girls club (since 2008)
+				Software Application & Programming Skills: Microsoft Office Suite, C, Java, Python, JavaScript, Rust
   			</li>
   			<li>
-  			  Active member of The Seattle Ruby on Rails Developers Meetup Group.
+  			  Frameworks / Platforms: Pytorch, Pandas, Django REST, Vue JS, Scrapy, Selenium, Arduino
   			</li>
 		   </ul>
       </div>
