--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -20,16 +20,18 @@
 			  </li>
 			  <li>
 				  <b>Internet of Things (IOT)</b>
-      </li>
+			  </li>
+			  <li>
+				<b>Data Structure & Algorithms</b>
+			</li>
 			</ul>
 		</div>
     <div class="col-sm-6">
       <h3 style="margin-top:0">Recent Projects</h3>
 		  <ul>
   			<li>
+				  <h5>Coming soon!</h5>
     		</li>
-  			<li>
-  			</li>
   		    </ul>
 			  <h3>Skills</h3>
   		    <ul>
