--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-sm-6">
 		    <p>
-			    My personal interests include:
+			    <h4>My personal interests include:</h4>
         </p>
 			<ul>
 			  <li>
