--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -29,9 +29,13 @@
     <div class="col-sm-6">
       <h3 style="margin-top:0">Recent Projects</h3>
 		  <ul>
-  			<li>
-				  <h5>Coming soon!</h5>
-    		</li>
+			  <li>Web Application using REST Frameworks with Vue JS frontend 
+				  to be deployed using docker and AWS (In Progress)</li>
+			  <li>Wheel of Fortune Python game</li>
+			  <li>Telegram Attendance Bot</li>
+			  <li>Node MCU & telegram Bot remote garage door opener</li>
+			  <li>Web Scrapping</li>
+			
   		    </ul>
 			  <h3>Skills</h3>
   		    <ul>
