--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -27,14 +27,14 @@
 			</ul>
 		</div>
     <div class="col-sm-6">
-      <h3 style="margin-top:0">Recent Projects</h3>
+      <h3 style="margin-top:0">Personal Projects</h3>
 		  <ul>
 			  <li>Web Application using REST Frameworks with Vue JS frontend 
 				  to be deployed using docker and AWS (In Progress)</li>
-			  <li>Wheel of Fortune Python game</li>
+			  <li>Wheel of Fortune Python Game</li>
 			  <li>Telegram Attendance Bot</li>
-			  <li>Node MCU & telegram Bot remote garage door opener</li>
-			  <li>Web Scrapping</li>
+			  <li>Node MCU & Telegram Bot remote garage door opener</li>
+			  <li>Web Scrapping of various sites</li>
 			
   		    </ul>
 			  <h3>Skills</h3>
