--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -12,6 +12,9 @@
 			    <h4>My personal interests include:</h4>
         </p>
 			<ul>
+				<li>
+					Software Engineering
+				</li>
 			  <li>
 				 <b>Deep learning</b>
 			  </li>
