--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -13,7 +13,7 @@
         </p>
 			<ul>
 				<li>
-					Software Engineering
+					<b>Software Engineering</b>
 				</li>
 			  <li>
 				 <b>Deep learning</b>
@@ -34,7 +34,7 @@
 		  <ul>
 			  <li>Web Application using REST Frameworks with Vue JS frontend 
 				  to be deployed using docker and AWS (In Progress)</li>
-			  <li>Wheel of Fortune Python Game</li>
+			  <li>Wheel of Fortune Game using Python</li>
 			  <li>Telegram Attendance Bot</li>
 			  <li>Node MCU & Telegram Bot remote garage door opener</li>
 			  <li>Web Scrapping of various sites</li>
