--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -30,7 +30,7 @@
 			</ul>
 		</div>
     <div class="col-sm-6">
-      <h3 style="margin-top:0">Personal Projects</h3>
+      <h3 style="margin-top:0">Projects</h3>
 		  <ul>
 			  <li>Web Application using REST Frameworks with Vue JS frontend 
 				  to be deployed using docker and AWS (In Progress)</li>
