--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -32,7 +32,7 @@
     <div class="col-sm-6">
       <h3 style="margin-top:0">Projects</h3>
 		  <ul>
-			  <li>Web Application using REST Frameworks with Vue JS frontend 
+			  <li>Web Application using REST Framework with Vue JS frontend 
 				  to be deployed using docker and AWS (In Progress)</li>
 			  <li>Wheel of Fortune Game using Python</li>
 			  <li>Telegram Attendance Bot</li>
